Sonar fikser (#2499)